--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -1,13 +1,13 @@
 .side_bar
   .side_bar__header
     .side_bar__header__user-name
-      user_name
+      =current_user.name
     .side_bar__header__menu
       .side_bar__header__menu__new-group
       =link_to "#", class:"fa fa-edit icon" do
         %span<>
       .side_bar__header__menu__edit
-      =link_to "#", class: "fa fa-cog icon" do
+      =link_to edit_user_path(current_user), class: "fa fa-cog icon" do
         %span<>
   .groups
     .group
