add flash bar functions

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "./vendor/reset";
 @import "./config/clearfix";
 @import "./config/color";
+@import "./module/flash";
 @import "./module/messages";
 @import "./module/sidebar";
 @import "./module/user";
