--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -4,7 +4,7 @@
       =current_user.name
     .side_bar__header__menu
       .side_bar__header__menu__new-group
-      =link_to "#", class:"fa fa-edit icon" do
+      =link_to new_group_path, class:"fa fa-edit icon" do
         %span<>
       .side_bar__header__menu__edit
       =link_to edit_user_path(current_user), class: "fa fa-cog icon" do
