--- a/app/assets/stylesheets/module/_sidebar.scss
+++ b/app/assets/stylesheets/module/_sidebar.scss
@@ -37,6 +37,10 @@
     padding:0 20px;
     .group{
       font-weight: bold;
+      a{
+        text-decoration: none;
+        color:white;
+      }
       &__name{
         padding-top:20px;
         font-size: 15px;
