--- a/app/assets/stylesheets/module/_sidebar.scss
+++ b/app/assets/stylesheets/module/_sidebar.scss
@@ -6,13 +6,18 @@
   background-color: #2f3e51;
   color:white;
   z-index: 10;
+  height:100vh;
   &__header{
+    box-sizing: border-box;
     height:100px;
     background-color: #253141;
     font-weight: bold;
     font-size: 16px;
     line-height: 100px;
     padding:0 20px;
+    width:300px;
+    position:fixed;
+    top:0;
     &__user-name{
       float:left;
     }
@@ -33,8 +38,8 @@
   }
   .groups{
     box-sizing: border-box;
-    height: calc(100vh - 100px);
-    padding:0 20px;
+    height: calc(100vh);
+    padding:100px 20px 100px;
     .group{
       font-weight: bold;
       a{
