made side-bar's group name and latest messages.

--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -16,4 +16,4 @@
           .group__name
             = group.name
           .group__latest-message
-            test message
+            = group.show_last_message
