--- a/app/assets/stylesheets/module/_sidebar.scss
+++ b/app/assets/stylesheets/module/_sidebar.scss
@@ -6,7 +6,7 @@
   height:100vh;
   background-color: #2f3e51;
   color:white;
-  z-index: 10;
+  // z-index: 10;
   &__header{
     box-sizing: border-box;
     height:100px;
