--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,11 +4,11 @@
   .main-header
     .main-header__left-box
       .main-header__left-box__group-name
-        test_group_name
+        = @group.name
       .main-header__left-box__members
         Member:
-        test_user1
-        test_user2
+        - @group.users.each do |user|
+          = user.name
     =link_to edit_group_path(@group), class:"btn main-header__edit-btn" do
       Edit
   .messages
