--- a/app/assets/stylesheets/module/_sidebar.scss
+++ b/app/assets/stylesheets/module/_sidebar.scss
@@ -3,10 +3,8 @@
   float:left;
   box-sizing: border-box;
   width:300px;
-  height:100vh;
   background-color: #2f3e51;
   color:white;
-  // z-index: 10;
   &__header{
     box-sizing: border-box;
     height:100px;
@@ -38,10 +36,13 @@
   }
   .groups{
     box-sizing: border-box;
+    width:300px;
     height: calc(100vh);
     padding:100px 20px 100px;
+    overflow: auto;
     .group{
       font-weight: bold;
+      overflow: auto;
       a{
         text-decoration: none;
         color:white;
